# geom-opt-rev-3

./: CMakeLists.txt  New cell.cpp  New geomopt.cpp  New line_search.cpp  New main.cpp  geomopt.cpp’ RFO without trust region  test.cpp
example/: POSCAR-CH  POSCAR-bak  gauss.gjf
src/: CMakeLists.txt  atominfo.cpp  atominfo.hpp  bfgs.cpp  bfgs.hpp  cell.cpp  cell.hpp  gdiis.cpp  gdiis.hpp  gediis.cpp  gediis.hpp  geomopt.cpp  geomopt.hpp  hessian.cpp  hessian.hpp  line_search.cpp  line_search.hpp  main.cpp  matrix.hpp  matrix_mkl.cpp  matrix_mkl.hpp  rfo.cpp  rfo.hpp  vec3f64.cpp  vec3f64.hpp
